--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -41,3 +41,7 @@ font-family: 'Sarala', sans-serif;*/
   border: 5px solid #F7EF6A;
   border-radius: 20px;
 }
+
+/*#about li {
+  display: inline-block;
+}*/
