--- a/public/css/module.css
+++ b/public/css/module.css
@@ -29,12 +29,17 @@ font-family: 'Sarala', sans-serif;*/
   max-width: 100%;
   border: 5px solid #93C178;
   padding: 10px 10px 10px 10px;
-  margin: 25px;
+  margin: 0 auto;
+}
+
+.mainNav {
+  padding-top: 1em;
 }
 
 .mainNav li {
   text-decoration: none;
   display: inline-block;
+  padding: 0.5em;
 }
 
 .nav li {
@@ -43,9 +48,19 @@ font-family: 'Sarala', sans-serif;*/
 }
 
 .siteInfo {
-  margin: auto;
+  margin: 0 auto;
   border-radius: 20px;
   background-color: rgba(70, 92, 139, .85);
-  padding: 0;
-  max-width: 80%;
+  /*padding: 0;*/
+  /*max-width: 80%;*/
+}
+
+.logo {
+  margin: 0 auto;
+  display: inline-block;
+  float: left;
+}
+
+.adjacent {
+  display: inline-block;
 }
