--- a/public/css/module.css
+++ b/public/css/module.css
@@ -23,8 +23,6 @@ Clean #DFDCE3        The clearish white*/
 
 /*font-family: 'Black Ops One', cursive; HEADER ONLY
 font-family: 'Sarala', sans-serif;*/
-
-
 .fa {
   color: #F7EF6A;
 }
@@ -58,4 +56,8 @@ font-family: 'Sarala', sans-serif;*/
   background-color: rgba(70, 92, 139, .85);
   padding: 1em;
   max-width: 80%;
+}
+
+.float ul {
+  text-decoration: none;
 }
