--- a/public/css/skeleton.css
+++ b/public/css/skeleton.css
@@ -237,11 +237,11 @@ input[type="url"],
 input[type="password"],
 textarea,
 select {
-  height: 38px;
+  height: 30px;
   padding: 6px 10px; /* The 6px vertically centers text on FF, ignored by Webkit */
-  background-color: #fff;
+  background-color: #DFDCE3;
   border: 1px solid #D1D1D1;
-  border-radius: 4px;
+  border-radius: 10px;
   box-shadow: none;
   box-sizing: border-box; }
 /* Removes awkward default styles on some inputs for iOS */
