--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -23,9 +23,18 @@ Clean #DFDCE3        The clearish white*/
 
 /*font-family: 'Black Ops One', cursive; HEADER ONLY
 font-family: 'Sarala', sans-serif;*/
+#michelle {
+  position: relative;
+  bottom: 35em;
+}
+#aaron {
+  position: relative;
+  top: 5em;
+}
+
 #topLogo {
   padding: 3em;
-  padding-bottom: 3.5em;  
+  padding-bottom: 3.5em;
 }
 #user_nav {
   color: #DFDCE3;
