clean up and styling changes

--- a/public/css/skeleton.css
+++ b/public/css/skeleton.css
@@ -161,7 +161,7 @@ p {
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: #1EAEDB; }
+  color: #093e04; }
 a:hover {
   color: #0FA0CE; }
 
