made some css changes

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -23,7 +23,7 @@ Clean #DFDCE3        The clearish white*/
 
 /*font-family: 'Black Ops One', cursive; HEADER ONLY
 font-family: 'Sarala', sans-serif;*/
-#michelle {
+/*#michelle {
   position: relative;
   bottom: 30em;
 
@@ -31,7 +31,7 @@ font-family: 'Sarala', sans-serif;*/
 #aaron {
   position: relative;
   top: 5em;
-}
+}*/
 
 #topLogo {
   padding: 3em;
