--- a/public/css/module.css
+++ b/public/css/module.css
@@ -32,6 +32,11 @@ font-family: 'Sarala', sans-serif;*/
   border: 5px solid #93C178;
   padding: 10px 10px 10px 10px;
   margin: 25px;
+  margin-top: 0px;
+}
+
+.mainNav {
+  text-align: center;
 }
 
 .mainNav li {
@@ -39,13 +44,7 @@ font-family: 'Sarala', sans-serif;*/
   font-size: 3em;
   text-decoration: none;
   display: inline-block;
-  float: right;
   padding-right: .5em;
-}
-
-.nav li {
-  text-decoration: none;
-  display: inline-block;
 }
 
 .siteInfo {
