--- a/public/css/base.css
+++ b/public/css/base.css
@@ -45,7 +45,7 @@ input.text {
 }
 
 header {
-  background-image: url('/images/esteban-lopez-272105.jpg');
+  background-image: url('/images/esteban-lopez-272105.png');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
