--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -23,6 +23,9 @@ Clean #DFDCE3        The clearish white*/
 
 /*font-family: 'Black Ops One', cursive; HEADER ONLY
 font-family: 'Sarala', sans-serif;*/
+#instructions {
+font-family: 'Fredoka One', cursive;
+}
 #michelle {
   position: relative;
   bottom: 30em;
