changed the nav location

--- a/public/css/module.css
+++ b/public/css/module.css
@@ -32,6 +32,7 @@ font-family: 'Sarala', sans-serif;*/
   font-size: 3em;
   text-decoration: none;
   display: inline-block;
+  float: right;
   padding-right: .5em;
 }
 
